# esdm

./: .clang-format  .editorconfig  CHANGES.md  LICENSE  README.md  README.usage.md  TODO  esdm.spec  flake.nix  meson.build  meson_options.txt
common/: arch.h  atomic.h  atomic_64.h  atomic_bool.h  binhexbin.c  binhexbin.h  bitshift.h  bitshift_be.h  bitshift_le.h  bool.h  buffer.c  buffer.h  build_bug_on.h  constructor.h  conv_be_le.h  esdm_logger.c  esdm_logger.h  fips_integrity.c  fips_integrity.h  helper.c  helper.h  linux_support.c  linux_support.h  logger.c  logger.h  math_helper.h  memset_secure.h  meson.build  mutex.h  mutex_w.h  ptr_err.h  queue.h  ret_checkers.h  rotate.h  systemd_support.c  systemd_support.h  term_colors.h  test_pertubation.c  test_pertubation.h  threading_support.c  (+5 more)
crypto/: bitshift_be.h  bitshift_le.h  chacha20.c  chacha20_drng.c  drbg.c  esdm_chacha20.h  esdm_chacha20_drng.h  esdm_chacha20_private.h  esdm_drbg.h  esdm_hash.h  esdm_hash_drbg.h  esdm_hash_drbg_sha512.h  esdm_hmac.h  esdm_sha256.h  esdm_sha3.h  esdm_sha512.h  esdm_sym.h  hash.c  hash_drbg.c  hmac.c  lc_chacha20.h  lc_chacha20_drng.h  lc_chacha20_private.h  lc_drbg.h  lc_hash.h  lc_hash_drbg.h  lc_hash_drbg_sha512.h  lc_hmac.h  lc_sha256.h  lc_sha3.h  lc_sha512.h  lc_sym.h  meson.build  sha256.c  sha3.c  sha512.c
esdm/: esdm.h  esdm_botan.cpp  esdm_botan.h  esdm_builtin_chacha20.c  esdm_builtin_chacha20.h  esdm_builtin_hash_drbg.c  esdm_builtin_hash_drbg.h  esdm_builtin_sha3_512.c  esdm_builtin_sha3_512.h  esdm_builtin_sha512.c  esdm_builtin_sha512.h  esdm_config.c  esdm_config.h  esdm_config_internal.h  esdm_crypto.h  esdm_definitions.h  esdm_drng_atomic.h  esdm_drng_mgr.c  esdm_drng_mgr.h  esdm_es_aux.c  esdm_es_aux.h  esdm_es_aux_multi_block.c  esdm_es_buf.c  esdm_es_buf.h  esdm_es_cpu.c  esdm_es_cpu.h  esdm_es_hwrand.c  esdm_es_hwrand.h  esdm_es_irq.c  esdm_es_irq.h  esdm_es_jent.c  esdm_es_jent.h  esdm_es_jent_kernel.c  esdm_es_jent_kernel.h  esdm_es_krng.c  esdm_es_krng.h  esdm_es_mgr.c  esdm_es_mgr.h  esdm_es_mgr_cb.h  esdm_es_pkcs11.c  (+26 more)
esdm/es_cpu/: cpu_random.h  cpu_random_arm.h  cpu_random_powerpc.h  cpu_random_riscv.h  cpu_random_s390.h  cpu_random_x86.h
frontends/aux/: esdm_aux_client.h  esdm_aux_need_entropy.c  meson.build
frontends/aux-client/: esdm_aux_client.h  esdm_aux_need_entropy.c  meson.build
frontends/botan-rng/: botan-rng.cpp  botan-rng.hpp  meson.build
frontends/cuse/: cuse_device.c  cuse_device.h  cuse_helper.c  cuse_helper.h  cuse_random.c  cuse_urandom.c  esdm-cuse-random.service.in  esdm-cuse-urandom.service.in  esdm-linux-compat.target.in  esdm-proc.service.in  meson.build  privileges.c  privileges.h  proc_files.c  selinux.c  selinux.h
frontends/getrandom/: getrandom.c  meson.build
frontends/kernel-seeder/: esdm-kernel-seeder.service.in  meson.build  seeder_main.c
frontends/openssl-provider/: common.c  common.h  meson.build  rng-provider.c  seed-src-provider.c
frontends/server/: esdm-server-priv.socket.in  esdm-server-suspend.service.in  esdm-server-unpriv.socket.in  esdm-server.service.in  meson.build  server_main.c
frontends/server-signal-helper/: esdm-server-resume.service.in  esdm-server-suspend.service.in  meson.build  server_signal_helper.c
frontends/tool/: common.c  esdm-wait-until-fully-seeded.service.in  meson.build  stress_delay.c  stress_process.c  stress_thread.c  tool.h  tool_main.c
service-rpc/client/: esdm_rpc_client.c  esdm_rpc_client.h  esdm_rpc_client_connection.c  esdm_rpc_client_connection.h  esdm_rpc_client_dispatcher.c  esdm_rpc_client_dispatcher.h  esdm_rpc_client_helper.h  esdm_rpc_client_internal.h  esdm_rpc_get_ent_lvl_c.c  esdm_rpc_get_min_reseed_secs_c.c  esdm_rpc_get_poolsize_c.c  esdm_rpc_get_random_bytes_c.c  esdm_rpc_get_random_bytes_full_c.c  esdm_rpc_get_random_bytes_full_timeout.c  esdm_rpc_get_random_bytes_full_timeout_c.c  esdm_rpc_get_random_bytes_min_c.c  esdm_rpc_get_random_bytes_pr_c.c  esdm_rpc_get_seed_c.c  esdm_rpc_get_write_wakeup_thresh_c.c  esdm_rpc_is_fully_seeded_c.c  esdm_rpc_is_min_seeded_c.c  esdm_rpc_jent_status_c.c  esdm_rpc_rnd_add_entropy_c.c  esdm_rpc_rnd_add_to_ent_cnt_c.c  esdm_rpc_rnd_clear_pool_c.c  esdm_rpc_rnd_get_ent_cnt_c.c  esdm_rpc_rnd_reseed_crng_c.c  esdm_rpc_set_min_reseed_secs_c.c  esdm_rpc_set_pkcs11_config_c.c  esdm_rpc_set_write_wakeup_thresh_c.c  esdm_rpc_status_c.c  esdm_rpc_write_data_c.c  meson.build
service-rpc/server/: esdm_rpc_get_ent_lvl_s.c  esdm_rpc_get_min_reseed_secs_s.c  esdm_rpc_get_poolsize_s.c  esdm_rpc_get_random_bytes_full_s.c  esdm_rpc_get_random_bytes_full_timeout_s.c  esdm_rpc_get_random_bytes_min_s.c  esdm_rpc_get_random_bytes_pr_s.c  esdm_rpc_get_random_bytes_s.c  esdm_rpc_get_seed_s.c  esdm_rpc_get_write_wakeup_thresh_s.c  esdm_rpc_is_fully_seeded_s.c  esdm_rpc_is_min_seeded_s.c  esdm_rpc_jent_status_s.c  esdm_rpc_privileges.c  esdm_rpc_privileges.h  esdm_rpc_rnd_add_entropy_s.c  esdm_rpc_rnd_add_to_ent_cnt_s.c  esdm_rpc_rnd_clear_pool_s.c  esdm_rpc_rnd_get_ent_cnt_s.c  esdm_rpc_rnd_reseed_crng_s.c  esdm_rpc_server.c  esdm_rpc_server.h  esdm_rpc_server_linux.c  esdm_rpc_server_linux.h  esdm_rpc_service.c  esdm_rpc_set_min_reseed_secs_s.c  esdm_rpc_set_pkcs11_config_s.c  esdm_rpc_set_write_wakeup_thresh_s.c  esdm_rpc_status_json_s.c  esdm_rpc_status_s.c  esdm_rpc_write_data_s.c  meson.build  privileges.c  privileges.h
tests/botan-rng/: botan_rng_tester.cpp  env.c  meson.build
tests/crypto/: hash_drbg_tester.c  hmac_sha2_256_tester.c  hmac_sha2_512_tester.c  meson.build  sha256_tester.c  sha512_tester.c
tests/cuse/: env.c  env.h  ioctl_addent.c  ioctl_clear.c  ioctl_getent.c  ioctl_getinfo.c  ioctl_reseed.c  ioctl_setent.c  ioctl_status.c  meson.build  poll_read.c  poll_write.c  privileges.h  random_read.c  random_read_no_server.c  random_write.c  random_write_no_server.c
tests/es/: es_cpu_test.c  es_jent_test.c  es_krng_test.c  es_sched_test.c  meson.build
tests/esdm/: esdm_drng_mgr_max_wo_reseed_bits_test.c  esdm_drng_mgr_max_wo_reseed_test.c  esdm_drng_seed_entropy_test.c  esdm_get_random_bytes_full_test.c  esdm_get_seed_test.c  (+6 more)
(+103 files in other folders)
